[package]
name = "seektf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = [ "blocking" , "json"] }
serde = { version = "1.0", features = [ "derive" ] }
unicode-segmentation = { version = "1.7.1" }
strip-ansi-escapes = "0.1"
clap = { version = "4.3.11", features = ["derive"] }
